[project]
name = "support-sandbox"
version = "0.2.0"
description = "Prefect examples and patterns"
requires-python = ">=3.12"
dependencies = [
    "prefect[aws,docker,kubernetes,shell,gcp]>=3.6.4",
    "prefect-slack>=0.2",
    "pytz>=2024.1",
]

[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "pre-commit>=4.0.0",
    "ty>=0.0.26",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]
